@@ -15,14 +15,6 @@
 $Id$
 """
 
-try:
-    import five.localsitemanager
-except ImportError, e:
-    import sys
-    import os
-    sys.path.append(os.path.join(os.path.dirname(__file__), 'src'))
-    import five.localsitemanager
-
 import PortalFolder
 import MembershipTool, WorkflowTool, CatalogTool, DiscussionTool
 import ActionsTool, UndoTool, RegistrationTool, SkinsTool
